fix: text-alignment to left instead of center

--- a/styles/main.css
+++ b/styles/main.css
@@ -1,29 +1,28 @@
 html,
 body {
-  margin: 0;
-  padding: 0;
+    margin: 0;
+    padding: 0;
 }
 
 body {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  margin: auto;
-  width: 95%;
-  max-width: 100%;
+    display: flex;
+    flex-direction: column;
+    font-size: 1.25rem;
+    margin: auto;
+    width: 90%;
+    max-width: 100%;
 
-  @media (min-width: 768px) {
-    width: 80%;
-  }
-  min-height: 100vh;
-  text-align: center;
+    @media (min-width: 768px) {
+        width: 70%;
+    }
+    min-height: 100vh;
+    text-align: left;
 }
 
 .card {
-  transition: transform 0.3s ease;
+    transition: transform 0.3s ease;
 }
 
 .card:hover {
-  transform: translateY(-5px);
+    transform: translateY(-5px);
 }
